--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -68,5 +68,8 @@
         background-repeat: no-repeat;
         background-size: contain;
     }
+    .editor{
+      background: linear-gradient(to bottom, black 60%, orange 85%, white 100%)
+  }
   }
 }
