--- a/src/components/createJornada.scss
+++ b/src/components/createJornada.scss
@@ -56,5 +56,32 @@
         border: 1px solid white;
       }
   }
- 
+  .addRound{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p{
+      text-align: center;
+    }
+    .btnAddRound{
+      width: 160px;
+      background-color: rgb(230, 149, 0);
+      border: none;
+      
+     }
+     .btnAddRound:hover{
+      background-color:rgba(230, 150, 0, 0.534);
+     }
+  }
+  .errorMsg{
+    color: rgb(230, 149, 0);
+    margin-top: 20px;
+    text-align: center;
+  }
+  .MsgOK{
+    color: rgb(230, 149, 0);
+    margin-top: 10px;
+    text-align: center;
+  }
 }
