--- a/src/components/jornadas.scss
+++ b/src/components/jornadas.scss
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px 10px;
-   min-width: 127px;
+    padding: 0px 10px 0px 0px;
+    min-width: 127px;
     h5{
         margin-bottom: 20px;
     }
