--- a/src/forms/addNewJornada.scss
+++ b/src/forms/addNewJornada.scss
@@ -5,11 +5,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    .groupsBut{
+        width: 90%;
+        margin: 0px 10px 10px 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 10px;
+        .group{
+            background: none !important;
+            border: 1px solid rgb(121, 121, 121);
+        }
+        .group:hover{
+            background-color: rgba(255, 166, 0, 0.075) !important;
+        }
+        .selected{
+            background-color: orange !important;
+            border: 1px solid orange;
+        }
+    }
     .insidePrincipalAddJornada{
         max-width: 800px;
         width: 50%;
         min-width: 340px;
         display: flex;
         justify-content: space-between;
+       
+    }
+    .roundSelect{
+        max-width: 800px;
+        width: 50%;
+        min-width: 340px;
+        margin-bottom: 20px;
     }
 }
