--- a/src/components/faseFinal.scss
+++ b/src/components/faseFinal.scss
@@ -5,9 +5,13 @@
     border: 1px solid rgb(121, 121, 121);
     border-radius: 8px;
     box-shadow: 2px 2px 5px black;
+    hr{
+        margin: 30px 0px;
+              
+    }
     h1{
         color: white;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
     h6{
         color: orange;
@@ -16,9 +20,41 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        align-items: center;
         flex-wrap: wrap;
         gap: 20px;
         width: 80vw;
+        margin-top: 20px;
+        >.match{
+            border: 1px solid rgb(121, 121, 121);
+            padding: 10px;
+            text-align: left;
+            border-radius: 8px;
+            box-shadow: 2px 2px 5px black;
+            display: flex;
+            gap: 10px;
+            flex-direction: row;
+            justify-content: space-between;
+        .teams{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 7px;
+        }
+            p{
+                margin: 0;
+            }
+            .points{
+                border-left: 1px solid orange;
+                display: flex;
+                flex-direction: row;
+                padding: 0px 10px;
+                .p1{
+                    margin: 4px;
+                    color: white;
+                 }
+             }
+        }
         .vertical{
             display: flex;
             flex-direction: column;
@@ -34,13 +70,18 @@
                 gap: 10px;
                 flex-direction: row;
                 justify-content: space-between;
-             p{
+                width: 100%;
+            p{
                 margin: 0;
-             }
-             .teams{
-                margin: auto;
-             }
-             .points{
+            }
+            .teams{
+                text-align: left;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 7px;
+            }
+            .points{
                 border-left: 1px solid orange;
                 display: flex;
                 flex-direction: row;
